# article-rec-api

./: .gitignore  .pre-commit-config.yaml  Brewfile  Dockerfile  Karfile  LICENSE  README.md  app.py  env.json  mypy.ini  pyproject.toml  requirements.in  requirements.txt  setup.py  tox.ini
.github/: test.yml
.github/workflows/: mypy.yml  test.yml
cdk/: cdk.context.json  package-lock.json  package.json
cdk/lib/: app-stack.ts  helpers.ts  pipeline-stack.ts
cdk/test/: cdk.test.ts
db/: helpers.py
db/mappings/: __init__.py  article.py  base.py  model.py  recommendation.py
handlers/: base.py  model.py  recommendation.py
lib/: config.py  db.py  metrics.py  secrets_manager.py
tests/: base.py  conftest.py
tests/factories/: article.py  base.py  model.py  recommendation.py
tests/handlers/: test_model_handler.py  test_recommendation_handler.py
