[tool.poetry]
name = "article-rec-api"
version = "0.1.0"
description = "Code for the Local News Lab article recommendation API"
authors = ["LocalNewsLab <mh3287@columbia.edu>"]

[tool.poetry.dependencies]
python = "3.9.*"
boto3 = "1.16.5"
cachetools = "5.0.0"
Flask = "1.1.2"
peewee = "3.14.0"
psycopg2-binary = "2.8.6"
pytest = "6.2.2"
tornado = "6.1"
uwsgi = "2.0.19.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
