[tool.poetry]
name = "article-rec-api"
version = "0.1.0"
description = "Code for the Local News Lab article recommendation API"
authors = ["LocalNewsLab <mh3287@columbia.edu>"]

[tool.poetry.dependencies]
# if this python version changes, the python base image in the Dockerfile needs to change too
python = "3.9.*"
boto3 = "1.16.5"
cachetools = "5.0.0"
Flask = "1.1.2"
peewee = "3.14.0"
psycopg2-binary = "2.8.6"
pytest = "6.2.2"
tornado = "6.1"
uwsgi = "2.0.19.1"

[tool.poetry.dev-dependencies]
mypy = "0.961"
pre-commit = "2.19.0"
types-cachetools = "5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 122
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | cdk
)/
'''

[tool.isort]
profile = "black"
